--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Metal&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap');
 * {
 	padding: 0;
 	margin: 0;
@@ -10,27 +12,105 @@ body {
 	box-sizing: border-box;
 }
 #gameboard {
-	max-width: 380px;
+	--size: 3;
+	max-width: 340px;
 	background: hsl(180, 11%, 14%);
 	width: 90%;
 	height: 100px;
-	min-height: 380px;
-	margin: 0 auto;
+	min-height: 340px;
+	margin-bottom: 60px;
 	border-radius: 20px;
 	position: absolute;
+	padding: 2em;
 	top: 35%;
 	left: 50%;
 	z-index: 2;
+	cursor: pointer;
+	display: grid;
+	justify-items: center;
+	align-items: center;
+	grid-template-columns: repeat(var(--size), minmax(auto, auto));
 	transform: translate(-50%, 35%);
 	box-shadow: 1px 1px 5px 0 black;
+}
+.gameboardDivs {
+	border: 1px solid white;
+	width: 113px;
+	height: 113px;
+	padding: 0;
+	margin: 0;
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: bolder;
+	font-size: 110px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* transform: scale(1); */
+	/* transition: opaciy .4s; */
+}
+.gameboardDivs:nth-child(1) {
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	border-bottom: none;
+}
+.gameboardDivs:nth-child(2) {
+	border-top: none;
+	/* border-left: none; */
+	border-bottom: none;
+}
+.gameboardDivs:nth-child(3) {
+	border-top: none;
+	border-right: none;
+	border-left: none;
+	border-bottom: none;
+}
+.gameboardDivs:nth-child(4) {
+	border-left: none;
+	border-right: none;
+}
+
+.gameboardDivs:nth-child(6) {
+	border-right: none;
+	border-left: none;
+}
+.gameboardDivs:nth-child(7) {
+	border-bottom: none;
+	border-left: none;
+	border-right: none;
+	border-top: none;
+}
+.gameboardDivs:nth-child(8) {
+	border-bottom: none;
+	border-top: none;
+}
+.gameboardDivs:nth-child(9) {
+	border-bottom: none;
+	border-right: none;
+	border-left: none;
+	border-top: none;
+}
+
+.score {
+	font-size: 3.5rem;
+	font-family: 'Metal', cursive;
+	background: -webkit-linear-gradient(
+		330deg,
+		#9815d5,
+		hsla(238, 82%, 50%, 0.692)
+	);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 #gameScore {
 	max-width: 360px;
 	width: 90%;
 	height: 100px;
 	min-height: 100px;
-	margin: 1em auto;
+	margin: 3em auto;
 	/* border: 2px solid whitesmoke; */
+	visibility: visible;
 	position: absolute;
 	top: -485%;
 	left: 50%;
@@ -45,16 +125,4 @@ body {
 	height: 80%;
 	width: 1px;
 	background: hsl(0, 0%, 96%);
-}
-p{
-	font-size: 2.5rem;
-	/* color: white; */
-	/* position: relative; */
-	color: linear-gradient(to right, hsla(281, 82%, 46%, 100%), hsla(238, 82%, 50%, 67%));
-
-	/* background-color: white; */
-}
-p .score {
-	/* color: white;
-	background-color: white; */
 }
