--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/* transform: scale(1); */
-	/* transition: opaciy .4s; */
+	/* transform: translateY(10px); 
+	transition: transform 4s; */
 }
 .gameboardDivs:nth-child(1) {
 	border-top: none;
@@ -91,7 +91,28 @@ body {
 	border-left: none;
 	border-top: none;
 }
-
+.xclass{
+	background: -webkit-linear-gradient(
+		230deg,
+		hsl(94, 94%, 52%),
+		hsl(54, 94%, 52%)
+	);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	transform: scale(1); 
+	transition: transform 2s, opacity .2s;
+}
+.oclass{
+	background: -webkit-linear-gradient(
+		230deg,
+		hsl(360, 94%, 52%),
+		hsl(54, 94%, 52%)
+	);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	transform: scale(1); 
+	transition: transform .2s, opactiy .2s;
+}
 .score {
 	font-size: 3.5rem;
 	font-family: 'Metal', cursive;
