--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 }
 body {
 	background-color: hsl(222, 11%, 24%);
-	height: auto;
-	width: auto;
+	height: 100%;
+	width: 100%;
 	position: relative;
 	box-sizing: border-box;
 }
@@ -15,13 +15,13 @@ body {
 	--size: 3;
 	max-width: 340px;
 	background: hsl(180, 11%, 14%);
-	width: 90%;
+	width: 75%;
 	height: 100px;
 	min-height: 340px;
 	margin-bottom: 60px;
 	border-radius: 20px;
 	position: absolute;
-	padding: 2em;
+	padding: 1.5em;
 	top: 35%;
 	left: 50%;
 	z-index: 2;
@@ -35,19 +35,19 @@ body {
 }
 .gameboardDivs {
 	border: 1px solid white;
-	width: 113px;
+	max-width: 113px;
+	min-width: 70px;
+	width: 95%;
 	height: 113px;
 	padding: 0;
 	margin: 0;
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: bolder;
-	font-size: 110px;
+	font-size: 6rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/* transform: translateY(10px); 
-	transition: transform 4s; */
 }
 .gameboardDivs:nth-child(1) {
 	border-top: none;
@@ -101,6 +101,7 @@ body {
 	-webkit-text-fill-color: transparent;
 	transform: scale(1); 
 	transition: transform 2s, opacity .2s;
+	user-select: none;
 }
 .oclass{
 	background: -webkit-linear-gradient(
@@ -112,18 +113,11 @@ body {
 	-webkit-text-fill-color: transparent;
 	transform: scale(1); 
 	transition: transform .2s, opactiy .2s;
+	user-select: none;
 }
-.score {
-	font-size: 3.5rem;
-	font-family: 'Metal', cursive;
-	background: -webkit-linear-gradient(
-		330deg,
-		#9815d5,
-		hsla(238, 82%, 50%, 0.692)
-	);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-}
+/* .score {
+	
+} */
 #gameScore {
 	max-width: 360px;
 	width: 90%;
@@ -146,4 +140,35 @@ body {
 	height: 80%;
 	width: 1px;
 	background: hsl(0, 0%, 96%);
+}
+.popup{
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 6;
+	width: 100%;
+	height:  100%;
+	background:rgba(0, 0, 0, 0.5);
+	backdrop-filter: blur(10px);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.winnertext{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 2rem;
+	color: white;
+	font-weight: normal;
+	user-select: none;
+}
+.colorwin{
+	font-size: 3.5rem;
+	font-family: 'Metal', cursive;
+	background: -webkit-linear-gradient(
+		330deg,
+		#9815d5,
+		#171ee8b0
+	);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
